self-signed-ca/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssl-service
spec:
  selector:
    app: nginx-ssl
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
  type: ClusterIP
