self-signed-ca/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ssl-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: deplyment.linuxdriven.us
    external-dns.alpha.kubernetes.io/target: 104.5.213.84
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/cluster-tls-secret
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'on'
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: 'on'
    nginx.ingress.kubernetes.io/proxy-ssl-name: 'nginx-ssl-service.default.svc.cluster.local'
    nginx.ingress.kubernetes.io/upstream-vhost: 'nginx-ssl-service.default.svc.cluster.local'
spec:
  ingressClassName: nginx-public
  rules:
  - host: deployment.linuxdriven.us
    http:
     paths:
      - backend:
          service:
            name: nginx-ssl-service
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deployment.linuxdriven.us
    secretName: deployment-tls
